syntax = "proto3";
package tendermint;

option java_multiple_files = true;
option java_package = "com.pbft.tendermint.core.grpc";
option java_outer_classname = "TendermintConsensusProto";

service GConsensusProtocolService {
  rpc Ping(GPingMessage) returns (GPongMessage) {}
  rpc OnProposeMessage(GProposeMessage) returns (GResult) {}
  rpc OnPreVoteMessage(GPreVoteMessage) returns (GResult) {}
  rpc OnPreCommitMessage(GPreCommitMessage) returns (GResult) {}
  rpc StartConsensus(GRequest) returns (GResult){}
}

message GPingMessage {
  int32 nodeId = 1;
}

message GPongMessage {
  int32 error = 1;
  int32 nodeId = 2;
}

message GData {
  uint64 timestamp = 1;
  string data = 2;
}

message GProposeMessage {
  int32 nodeId = 1;
  int32 height = 2;
  int32 round = 3;
  int32 validRound = 4;
  GData data = 5;
  bytes hashValue = 6;
  bytes signature = 7;
}

message GPreVoteMessage {
  int32 height = 1;
  int32 round = 2;
  bytes hashValue = 3;
  bytes signature = 4;
  int32 nodeId = 5;
}

message GPreCommitMessage {
  int32 height = 1;
  int32 round = 2;
  bytes hashValue = 3;
  bytes signature = 4;
  int32 nodeId = 5;
}

message GResult {
  int32 error = 1;
  string data = 2;
}

message GRequest {
  int32 status = 1;
}